# my-site-backend

./: .gitignore  Cargo.toml  data.db  data.db-shm  data.db-wal
database/: Cargo.toml
database/src/: lib.rs  records.rs  traits.rs
migrations/: 0000_language.sql  0001_visitor.sql  0003_post.sql  0004_post_content.sql  0005_post_comment.sql  0006_post_view.sql
src/: error.rs  main.rs  structs.rs
src/api/: mod.rs
src/api/v1/: mod.rs  pagination.rs  router.rs
src/api/v1/endpoints/: language.rs  metadata.rs  mod.rs  prelude.rs
src/database/: connection.rs  entities.rs  mod.rs  operations.rs  record.rs  setup.rs  types.rs
src/database/entities/: article.rs  article_content.rs  content.rs  laguage.rs  mod.rs  prelude.rs
src/queries/: metadata.surrealql  mod.rs
