[package]
name = "my-site-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
surrealdb = "2.3.1"

[patch.crates-io]
serde = { git = "https://github.com/frederik-uni/serde" }
serde-content = { git = "https://github.com/frederik-uni/serde-content" }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
