[package]
name = "my-site-backend"
version = "0.1.0"
edition = "2024"
include = ["src/queries/*.surrealql"]

[dependencies]
surrealdb = "2.3.1"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
markdown = "1.0.0"
regex = "1.11.1"
thiserror = "2.0.12"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde_json = "1.0.140"

[patch.crates-io]
# serde = { git = "https://github.com/frederik-uni/serde" }
# serde-content = { git = "https://github.com/frederik-uni/serde-content" }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
