[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.2.2"
haikunator = "0.1.2"
paste = "1.0.15"
markdown = "1.0.0"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
